sumo/tests/traci/variable_subscription/errors/UnknownVehicle/errors.traci
Error: Answered with error to command 0xa4: Vehicle 'x' is not known
Error: Answered with error to command 0xd4: Could not add subscription (Vehicle 'x' is not known).
